--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+html, body {
+    width: 100%;
+    height: 100%;
+  }
+  
 #contenedorPadre{
     display: flex;
     justify-content: center;
@@ -12,7 +17,7 @@
     align-items: center;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     border-radius: 20px;
-    height: 150px;
+    height: 300px;
     width:auto;
     font-size: 20px;
     font-weight: bold;
